<resources>
    <string name="app_name">FirebaseApp2</string>

    <string name="titulo_form_cadastro">Cadastre-se</string>
    <string name="titulo_form_login">Login do Usuário</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_botao_cadastrar">Cadastrar</string>
    <string name="txt_botao_login">Logar</string>
    <string name="txt_login_cadastrar">Criar novo usuário</string>
    <string name="btn_deslogar">Deslogar</string>
    <string name="btn_ler">Ler</string>
    <string name="btn_gravar">Gravar</string>
    <string name="btn_atualizar">Atualizar</string>
    <string name="btn_deletar">Deletar</string>

</resources>