<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.telaprincipal.TelaPrincipal">

    <Button
        android:id="@+id/btn_deslogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_deslogar"
        android:padding="15dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_gravar_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_gravar"
        android:padding="15dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="#0037FF"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_ler_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ler"
        android:padding="15dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="#23BF00"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_atualizar_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_atualizar"
        android:padding="15dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="#FFB700"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_deletar_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_deletar"
        android:padding="15dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="#D30101"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txt_resultado_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/txt_resultado_sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/txt_resultado_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

</LinearLayout>